<resources>
    <string name="app_name">Athahitha</string>
    <string name="res1">අතහිත</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="Login">Login</string>
    <string name="back">back</string>
    <string name="my_profile">My Profile</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="priceless_humanity">Priceless Humanity</string>
    <string name="request_for_donations">Request for Donations</string>
    <string name="name">name</string>
    <string name="birthday">BirthDay</string>
    <string name="age">Age</string>
    <string name="namee">Name</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="enter_your_email_address">Enter your email address:</string>
    <string name="forgot_Password">Forgot Password</string>
    <string name="already_an_user_login">Already an user? Login</string>
    <string name="next">Next</string>
    <string name="add_your_photo">Add your Photo</string>
    <string name="service_number">Service Number</string>
    <string name="grama_niladari_division">Grama Niladari Division</string>
    <string name="divisional_secretariat">Divisional Secretariat</string>
    <string name="name_of_grama_niladari">Name of Grama Niladari</string>
    <string name="for_grama_niladari_officer">For Grama Niladari Officer</string>
    <string name="about_organization">About Organization</string>
    <string name="request_catogaries">Request catogaries</string>
    <string name="description">Description</string>
    <string name="name_of_the_organization">Name of the Organization</string>
    <string name="notification_1">Notification 1</string>
    <string name="apply">Apply</string>
    <string name="time">time</string>
    <string name="notification_2">Notification 2</string>
    <string name="notification_3">Notification 3</string>
    <string name="notification_4">Notification 4</string>
    <string name="nextt">Next</string>
    <string name="add_your_bank_details">Add your Bank Details</string>
    <string name="personal">Personal</string>
    <string name="month_day_year">Month / Day / Year</string>
    <string name="address">Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="account_holders_name">Account Holders name</string>
    <string name="branch">Branch</string>
    <string name="account_number">Account Number</string>
    <string name="bank_name">Bank Name</string>
    <string name="title_activity_location_address">location_address</string>
    <string name="title_activity_location">location</string>
    <string name="fingerprint">fingerprint</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="email">email</string>
    <string name="title_activity_current_location">Current_location</string>
    <string name="back_button" />
</resources>