<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="380dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bgone"
    tools:context=".Login">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_editext"
        app:cardCornerRadius="50dp"
        app:cardElevation="50dp"
        app:layout_constraintBottom_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="30dp">

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/forggotpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.132"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/createacc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forggotpassword"
        app:layout_constraintVertical_bias="0.883"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="350dp"
        android:layout_height="371dp"
        android:layout_gravity="center"
        android:layout_marginTop="240dp"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Logintext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:textAlignment="center"
            android:textColor="#4682B4"
            android:textSize="35sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/custom_editext"
            android:hint="Email"
            android:padding="14dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:autofillHints="password"
            android:background="@drawable/custom_editext"
            android:drawablePadding="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="14dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background" />


        <Button
            android:id="@+id/Log"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_button"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/fingerprintlogin"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/fingerprint"
            android:src="@drawable/baseline_fingerprint_24" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

